[package]
name = "raven"
version = "1.0.0"
edition = "2021"

[dependencies]
# Async Runtime
tokio = { version = "1.32", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"

# Database (ACID)
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization & Config
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# CLI Argument Parsing
clap = { version = "4.4", features = ["derive"] }

# Networking & Download
reqwest = { version = "0.11", features = ["stream", "rustls-tls"] }

# Cryptography
sha2 = "0.10"
hex = "0.4"

# Versioning (Semantic Versioning)
semver = { version = "1.0", features = ["serde"] } 

# System & Filesystem
tempfile = "3.8"
walkdir = "2.4"
nix = { version = "0.27", features = ["fs", "mount", "sched", "user", "process"] }
tar = "0.4"
flate2 = "1.0"
xz2 = "0.1"

# UI & UX
indicatif = "0.17"   # Progress bars and spinners
console = "0.15"     # Terminal colors/control
owo-colors = "3.5"   # Easy coloring
fuzzy-matcher = "0.3" # Search logic

# Git (for syncing recipes)
git2 = "0.18"